--- a/src/components/FriendList/FriendList.module.css
+++ b/src/components/FriendList/FriendList.module.css
@@ -48,3 +48,41 @@
   margin-bottom: 35px;
   margin-top: 20px;
 }
+
+
+
+.item {
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  flex-direction: row;
+  width: 300px;
+  height: 100px;
+  background-color: white;
+  border-width: 3px;
+  border-style: solid;
+  border-color: #5a5a58;
+  border-image: none;
+  box-shadow: 12px 12px 8px 4px rgba(0, 0, 0, 0.3);
+  padding-top: 10px;
+  padding-bottom: 10px;
+}
+
+.item:not(:last-of-type) {
+  margin-bottom: 20px;
+}
+
+.isOnline,
+.isOffline {
+  display: block;
+  width: 30px;
+  height: 30px;
+  border-radius: 50%;
+  background-color: green;
+  margin-right: 10px;
+}
+
+.isOffline {
+  background-color: red;
+}
+
